--- a/views/about.html
+++ b/views/about.html
@@ -16,7 +16,7 @@
    <!-- <img src="static/img/AC_imgnew.png" class="rounded"> -->
 </div>
 <div class="textnexttoimage">
-   <span id="class-nickname-name">glorious-pony</span>
+   <span id="class-nickname-name">Class nickname: glorious-pony</span>
     <br/>
     <b>Post-grad industry:</b> Tech.<br>
     <b>Favorite programming language:</b> Python.<br>
@@ -30,7 +30,7 @@
    <!-- <img src="static/img/NM_img.jpeg" class="rounded"> -->
 </div>
 <div class="textnexttoimage">
-    <span id="class-nickname-name">zealous-bison</span>
+    <span id="class-nickname-name">Class nickname: zealous-bison</span>
        <br/>
     <b>Post-grad industry:</b> Consulting <br>
     <b>Favorite programming language:</b> Javascript <br>
@@ -46,7 +46,7 @@
 </div>
 
 <div class="textnexttoimage">
-    <span id="class-nickname-name">curious-ox</span>
+    <span id="class-nickname-name">Class nickname: curious-ox</span>
        <br/>
        <b>Post-grad industry:</b> Tech <br>
     <b>Favorite programming language:</b> HTML <br>
@@ -61,7 +61,7 @@
 </div>
 
 <div class="textnexttoimage">
-     <span id="class-nickname-name">thankful-lion</span>
+     <span id="class-nickname-name">Class nickname: thankful-lion</span>
        <br/>
     
     <b>Post-grad industry:</b> Consulting <br>
