--- a/views/events/new.html
+++ b/views/events/new.html
@@ -6,10 +6,10 @@
     <ul class='form-errors'>
         {% for error in errors %}
         <li>
-            {{ error }}
+            <font color="red">{{ error }}</font>
         </li>
-        {% endfor %}
     </ul>
+    {% endfor %}
 {% endif %}
 
 <div class="container">
