Adding outlook calendar entry

--- a/views/layout.html
+++ b/views/layout.html
@@ -33,6 +33,10 @@
     <h1>
       <title id=title>{{title}}</title>
     </h1>
+    
+    <!-- AddEvent script -->
+<script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
+
 </head>
  <header>
  </header>
