--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -38,6 +38,17 @@
         </form>
     </div>
     
+    <!-- Button code -->
+<div title="Add to Calendar" class="addeventatc">
+    Add to Calendar
+    <span class="start">12/21/2018 08:00 AM</span>
+    <span class="end">12/21/2018 10:00 AM</span>
+    <span class="timezone">America/Los_Angeles</span>
+    <span class="title">Summary of the event</span>
+    <span class="description">Description of the event</span>
+    <span class="location">Location of the event</span>
+</div>
+    
     <div class="col-md-6">
         <form action="/events/{{ event.id }}/donate" method="post">
         <br>Want to contribute? <br>
