--- a/views/events/new.html
+++ b/views/events/new.html
@@ -45,20 +45,128 @@
                 <label for="image"></label>
                 <input type="text" name="image" placeholder="Event Image URL" multiple>
             <div class= "special-new">
-                <label for="year">Year</label>
+                <h5> Event Start time </h5>
+                <label for="year"></label>
+                <h5>Year</h5>
                 <select name="year">
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
-                    <option>2022</option>
+                </select>
+            </div>
+            <div class= "special-new">
+                <label for="month"></label>
+                <h5>Month</h5>
+                <select name="month">
+                    <option>January</option>
+                    <option>February</option>
+                    <option>March</option>
+                    <option>April</option>
+                    <option>May</option>
+                    <option>June</option>
+                    <option>July</option>
+                    <option>August</option>
+                    <option>September</option>
+                    <option>October</option>
+                    <option>November</option>
+                    <option>December</option>
+                </select>
+            </div>
+            <div class= "special-new">
+                <label for="day"></label>
+                <h5>Day</h5>
+                <select name="day">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
+                    <option>13</option>
+                    <option>14</option>
+                    <option>15</option>
+                    <option>16</option>
+                    <option>17</option>
+                    <option>18</option>
+                    <option>19</option>
+                    <option>20</option>
+                    <option>21</option>
+                    <option>22</option>
+                    <option>23</option>
+                    <option>24</option>
+                    <option>25</option>
+                    <option>26</option>
+                    <option>27</option>
+                    <option>28</option>
+                    <option>29</option>
+                    <option>30</option>
+                    <option>31</option>
+                </select>
+            </div>
+            <div class= "special-new">
+                <label for="hour"></label>
+                <h5>Hour</h5>
+                <select name="hour">
+                    <option>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
+                    <option>13</option>
+                    <option>14</option>
+                    <option>15</option>
+                    <option>16</option>
+                    <option>17</option>
+                    <option>18</option>
+                    <option>19</option>
+                    <option>20</option>
+                    <option>21</option>
+                    <option>22</option>
+                    <option>23</option>
+                </select>
+            </div>
+                <br><br>
+            <div class= "special-new">
+                <label for="minute"></label>
+                <h5>Minute</h5>
+                <select name="minute">
+                    <option>00</option>
+                    <option>30</option>
+                    </select>
+            </div>
+            <div class= "special-new">
+                <h5> Event End time </h5>
+                <label for="yearend"></label>
+                <h5>Year</h5>
+                <select name="yearend">
+                    <option>2017</option>
+                    <option>2018</option>
+                    <option>2019</option>
+                    <option>2020</option>
+                    <option>2021</option>
                 </select>
             </div>
                 <br>
             <div class= "special-new">
-                <label for="month">Month</label>
-                <select name="month">
+                <label for="endmonth">Month</label>
+                <h5>Month</h5>
+                <select name="endmonth">
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -75,8 +183,9 @@
             </div>
                 <br><br>
             <div class= "special-new">
-                <label for="day">Day</label>
-                <select name="day">
+                <label for="endday">Day</label>
+                <h5>Day</h5>
+                <select name="endday">
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -112,8 +221,9 @@
             </div>
                 <br><br>
             <div class= "special-new">
-                <label for="hour">Hour</label>
-                <select name="hour">
+                <label for="endhour">Hour</label>
+                <h5>Hour</h5>
+                <select name="endhour">
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -142,13 +252,13 @@
             </div>
                 <br><br>
             <div class= "special-new">
-                <label for="minute">Minute</label>
-                <select name="minute">
+                <label for="endminute">Minute</label>
+                <h5>Minute</h5>
+                <select name="endminute">
                     <option>00</option>
                     <option>30</option>
                     </select>
             </div>
-                <br><br>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
             </fieldset> 
