--- a/static/bootstrap-4.1.3-dist/css/bootstrap.css
+++ b/static/bootstrap-4.1.3-dist/css/bootstrap.css
@@ -391,6 +391,18 @@ h6, .h6 {
   font-size: 1rem;
 }
 
+.h7 {
+  margin-bottom: 0.5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  color: white;
+}
+
+h7, .h7 {
+  font-size: 2.5rem;
+}
+
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
