--- a/static/css/main.css
+++ b/static/css/main.css
@@ -316,8 +316,7 @@ img {
 }
 
 .special-new {
-    max-width: 800px;
-    height: auto;
+    max-width: auto;
     width: auto;
     float:left;
     overflow: hidden;
@@ -326,4 +325,23 @@ img {
 
 .a {
     color: #ff0000;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.special-footer {
+    font: #ffffff;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    float: left;
+    border-radius: 0%;
+    background-color: #dc3378;
+    margin-top: 0px;
+    padding-top: 0px;
+    text-align: center;
+    font-size: 20px;
+    bottom:0;
 }
