--- a/views/index.html
+++ b/views/index.html
@@ -5,21 +5,28 @@
 <body>
 
 <div class="container">
-  <h2>Upcoming Events</h2>
-   
- <ul>
+    <h2>Upcoming Events</h2>
+  
+<ul>
       {% for event in eventsListSQL %}
       <li class="event" id="event-{{ event.id }}">
-        <a href="/events/{{ event.id }}" id="title">{{ event.title }}</a>
-        <br />
-        <time>{{event.month}}/ {{event.day}}/ {{event.year}} {{event.hour}}:{{event.minute}}</time>
-        event-{{event.id}}
-      </li>
+        <div class="list-group">
+          <div class="card-header">
+          <a class="card-link" data-toggle="collapse" href="#{{ event.id }}">{{ event.title }}</a>
+        </div>
+        <div id="{{ event.id }}" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+            Event description: {{ event.description }}<br>
+            Event time: <time>{{event.month}}/ {{event.day}}/ {{event.year}} {{event.hour}}:{{event.minute}}</time>
+            <br>
+            <a href="/events/{{ event.id }}" id="title">Learn more here</a>
+            </div>
+        </div>
+        </div>
+        </li>
       {% endfor %}
 </ul>
-
-</div>
-
+</div> 
 </body>
 
 {% endblock %}
