--- a/views/new.html
+++ b/views/new.html
@@ -44,22 +44,21 @@
                 <input type="text" name="description" placeholder="Event Description"/>
                 <label for="image"></label>
                 <input type="text" name="image" placeholder="Event Image URL" multiple>
-            <div class= "special-new">
+            <div class="col-md-6">
                 <h5> Event Start time </h5>
                 <label for="year"></label>
-                <h5>Year</h5>
                 <select name="year">
+                    <option disabled selected>Select Year</option>
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-            </div>
-            <div class= "special-new">
+                <br><br>
                 <label for="month"></label>
-                <h5>Month</h5>
                 <select name="month">
+                    <option disabled selected>Select Month</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -73,11 +72,10 @@
                     <option>November</option>
                     <option>December</option>
                 </select>
-            </div>
-            <div class= "special-new">
+                <br><br>
                 <label for="day"></label>
-                <h5>Day</h5>
                 <select name="day">
+                    <option disabled selected>Select Day</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -110,11 +108,10 @@
                     <option>30</option>
                     <option>31</option>
                 </select>
-            </div>
-            <div class= "special-new">
+                <br><br>
                 <label for="hour"></label>
-                <h5>Hour</h5>
                 <select name="hour">
+                    <option disabled selected>Select Hour</option>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -140,33 +137,29 @@
                     <option>22</option>
                     <option>23</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
                 <label for="minute"></label>
-                <h5>Minute</h5>
                 <select name="minute">
+                    <option disabled selected>Select Minute</option>
                     <option>00</option>
                     <option>30</option>
                     </select>
             </div>
-            <div class= "special-new">
+            <div class="col-md-6">
                 <h5> Event End time </h5>
-                <label for="yearend"></label>
-                <h5>Year</h5>
-                <select name="yearend">
+                <label for="year"></label>
+                <select name="year">
+                    <option disabled selected>Select Year</option>
                     <option>2017</option>
                     <option>2018</option>
                     <option>2019</option>
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-            </div>
-                <br>
-            <div class= "special-new">
-                <label for="endmonth">Month</label>
-                <h5>Month</h5>
+                <br><br>
+                <label for="endmonth"></label>
                 <select name="endmonth">
+                    <option disabled selected>Select Month</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -180,12 +173,10 @@
                     <option>November</option>
                     <option>December</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
-                <label for="endday">Day</label>
-                <h5>Day</h5>
+                <label for="endday"></label>
                 <select name="endday">
+                    <option disabled selected>Select Day</option>
                     <option>1</option>
                     <option>2</option>
                     <option>3</option>
@@ -218,12 +209,10 @@
                     <option>30</option>
                     <option>31</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
-                <label for="endhour">Hour</label>
-                <h5>Hour</h5>
+                <label for="endhour"></label>
                 <select name="endhour">
+                    <option disabled selected>Select Hour</option>
                     <option>0</option>
                     <option>1</option>
                     <option>2</option>
@@ -249,15 +238,24 @@
                     <option>22</option>
                     <option>23</option>
                 </select>
-            </div>
                 <br><br>
-            <div class= "special-new">
-                <label for="endminute">Minute</label>
-                <h5>Minute</h5>
-                <select name="endminute">
+                <label for="endminute"></label>
+                <select name="endminute" align="left">
+                    <option disabled selected>Select Minute</option>
                     <option>00</option>
                     <option>30</option>
                     </select>
+                    <br><br>
+                    <div class="dropdown">
+                      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown button
+                      </button>
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
             </div>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
@@ -269,8 +267,9 @@
                 <input type="submit" class="submit action-button" value="Submit">
             </fieldset>
         </form>
-    </div>
+        <br><br><br><br><br><br><br>
 
+    </div>
 <script>
     function validateForm() {
     var x1 = document.forms["msform"]["firstname"].value;
