--- a/views/layout.html
+++ b/views/layout.html
@@ -31,6 +31,7 @@
     <![endif]-->
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
     <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
@@ -46,10 +47,10 @@
  <header>
  </header>
 <body>
-  
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="content">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-  <img src="static/img/logo.png" alt="" id ="logo"></a>
+  <img src="/static/img/logo.png" alt="" id ="logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -75,10 +76,6 @@
         {% block body %}
         {% endblock %}
     </div>
-    
-    <footer>
-      
-    </footer>
 
     {% block late_loading_js %}
     {% endblock %}
@@ -94,19 +91,14 @@
 <script src="/static/multistepform/form/assets/multistepform/js/msform.js"></script>
 
 </div>
-
 </body>
 <br><br>
 
-<footer>
-  <div class="special-footer">
-    <br><br>
-    <p 
-    <a href='/about'>About</a>
-    <a href='/'>Home</a>
-        </p>
-    <br><br>
-    </div>
-  </footer>
+<footer class ="special-footer">
+      <br><br>
+      <a href='/about'>About</a>
+      <a href='/'>Home</a>
+      <br><br>
+</footer>
 
 </html>
