Homepage changes and A/B Google Analytics

--- a/static/bootstrap-4.1.3-dist/css/bootstrap.css
+++ b/static/bootstrap-4.1.3-dist/css/bootstrap.css
@@ -42,7 +42,7 @@
 }
 
 html {
-  font-family: montserrat;
+  font-family:'Amatic SC', cursive;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
