--- a/views/layout.html
+++ b/views/layout.html
@@ -9,8 +9,15 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-129889665-1');
+    gtag('config', 'UA-129889665-1', 'require', {'optimize_id': 'GTM-KMSHZDR'});
     </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MSZ4PGB');</script>
+    <!-- End Google Tag Manager -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -47,6 +54,12 @@
  <header>
  </header>
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSZ4PGB"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <div class="content">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
@@ -72,10 +85,10 @@
   </div>
 </nav>
 
-    <div>
-        {% block body %}
-        {% endblock %}
-    </div>
+    
+      {% block body %}
+      {% endblock %}
+    
 
     {% block late_loading_js %}
     {% endblock %}
@@ -91,14 +104,10 @@
 <script src="/static/multistepform/form/assets/multistepform/js/msform.js"></script>
 
 </div>
-</body>
-<br><br>
-
 <footer class ="special-footer">
-      <br><br>
       <a href='/about'>About</a>
+      <a> &nbsp | &nbsp</a>
       <a href='/'>Home</a>
-      <br><br>
 </footer>
-
+</body>
 </html>
