--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -45,7 +45,7 @@
     
     <div class="col-md-4">
         <form action="/events/{{ event.id }}/donate" method="post">
-        <br>Want to contribute? <br>
+        <br>Want to support this event? <br>
         <a id="donate" type="submit"></a>
         <button class="btn btn-success btn-lg" type="submit" id="donate">Donate</button>
     </div>
