--- a/static/css/main.css
+++ b/static/css/main.css
@@ -331,21 +331,6 @@ ul {
   list-style-type: none;
 }
 
-.special-footer {
-    color: white;
-    width: 100%;
-    float: left;
-    padding:20px;
-    padding-bottom:16px;
-    border-radius: 0%;
-    background-color: #dc3378;
-    text-align: center;
-    font-size: 20px;
-    bottom: 0;
-    left: 0;
-    height: 50px;
-}
-
 .container-confirmation {
     min-width: 992px !important;
   }
@@ -419,3 +404,25 @@ body, html {
     font-size: 100px;
     line-height: normal;
 }
+
+footer a {
+  color:white;
+  font-family: 'Amatic SC', cursive;
+  font-size: 40px;
+  text-align: center;
+}
+.special-footer {
+    color: white;
+    width: 100%;
+    float: left;
+    padding:0px;
+    border-radius: 0%;
+    background-color: #374759;
+    text-align: center;
+    font-size: 20px;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    height: 75px;
+}
+
