--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-<body>
-
  <div class="speciallayer" text-align="center">
     <div class="specialtitle">NEVER MISS ANOTHER YALE EVENT!<br>
     <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Browse Events</a>
@@ -16,9 +14,39 @@
 <ul>
       {% for event in eventsListSQL %}
       <li class="event" id="event-{{ event.id }}">
-        <div class="list-group">
-          <div class="card-header">
-          <a class="card-link" data-toggle="collapse" href="#{{ event.id }}">{{ event.title }}</a>
+        <div class="card-group">
+            <div class="list-group">
+              <div class="card-header">
+              <a class="card-link" data-toggle="collapse" href="#{{ event.id }}">{{ event.title }}</a>
+            </div>
+            </div>
+            <div class="list-group">
+              <div class="card-header">
+              <a class="card-link" data-toggle="collapse" href="#{{ event.id }}">{{ event.title }}</a>
+            </div> 
+            </div>
+            </div>
+
+        <div id="{{ event.id }}" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+            Event description: {{ event.description }}<br>
+            Event time: <time>{{event.month}}/ {{event.day}}/ {{event.year}} {{event.hour}}:{{event.minute}}</time>
+            <br>
+            <a href="/events/{{ event.id }}" id="title">Learn more here</a>
+            </div>
+        </div>
+        </li>
+      {% endfor %}
+</ul>
+
+<ul>
+      {% for event in eventsListSQL %}
+    <li class="event" id="event-{{ event.id }}">
+         <div class = "card">
+           <div class="card-header">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+            <a class="card-link" data-toggle="collapse" href="#{{ event.id }}">{{ event.title }}</a>
         </div>
         <div id="{{ event.id }}" class="collapse" data-parent="#accordion">
             <div class="card-body">
@@ -28,12 +56,54 @@
             <a href="/events/{{ event.id }}" id="title">Learn more here</a>
             </div>
         </div>
+            </div>
         </div>
-        </li>
-      {% endfor %}
+    </li>
 </ul>
-</div> 
-</body>
+
+<ul>
+      {% for event in eventsListSQL %}
+      <li class="event" id="event-{{ event.id }}">
+<div class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+</ul>
+
+</div>
+
+{% endfor %}
+
+  <!--    <h5 class="card-title">Card title</h5>-->
+  <!--    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>-->
+  <!--    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+  <!--  </div>-->
+  <!--</div>-->
+
+</div>
+<br><br><br>
 
 {% endblock %}
 
