Fixed homepage loading issue

--- a/views/layout.html
+++ b/views/layout.html
@@ -85,10 +85,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </nav>
 
-    
+    <div>
       {% block body %}
       {% endblock %}
-    
+    </div>
 
     {% block late_loading_js %}
     {% endblock %}
