--- a/views/layout.html
+++ b/views/layout.html
@@ -24,7 +24,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MSZ4PGB');</script>
+    })(window,document,'script','dataLayer','GTM-KMSHZDR');</script>
     <!-- End Google Tag Manager -->
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
