--- a/views/new.html
+++ b/views/new.html
@@ -250,9 +250,8 @@
                         Dropdown button
                       </button>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item">00</a>
+                        <a class="dropdown-item">30</a>
   </div>
 </div>
             </div>
