Event page images

--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -88,8 +88,8 @@
   <div class="card-header">
     <h5>Event Image</h5></div>
   <div class="card-body">
-    <img id="image"></img>
-    <span id="image">{{ event.image }}</span></p>
+    <img id="image">
+    <span id="image"><img src = "{{ event.image }}"></span>
   </div>
 </div>
 
