Latest update to Heroku

--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -88,8 +88,8 @@
   <div class="card-header">
     <h5>Event Image</h5></div>
   <div class="card-body">
-    <img id="image">
-    <span id="image"><img src = "{{ event.image }}"></span>
+    <!--<img id="image">-->
+    <span id="image"><img id="image" src = "{{ event.image }}"></span>
   </div>
 </div>
 
