Form remove styled button

--- a/views/new.html
+++ b/views/new.html
@@ -245,15 +245,15 @@
                     <option>30</option>
                     </select>
                     <br><br>
-                    <div class="dropdown">
-                      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown button
-                      </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item">00</a>
-                        <a class="dropdown-item">30</a>
-  </div>
-</div>
+<!--                    <div class="dropdown">-->
+<!--                      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                        Dropdown button-->
+<!--                      </button>-->
+<!--                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
+<!--                        <a class="dropdown-item">00</a>-->
+<!--                        <a class="dropdown-item">30</a>-->
+<!--  </div>-->
+<!--</div>-->
             </div>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
