--- a/views/new.html
+++ b/views/new.html
@@ -80,7 +80,6 @@
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
-                    <option>6</option>
                     <option>7</option>
                     <option>8</option>
                     <option>9</option>
@@ -146,8 +145,8 @@
             </div>
             <div class="col-md-6">
                 <h5> Event End time </h5>
-                <label for="year"></label>
-                <select name="year">
+                <label for="endyear"></label>
+                <select name="endyear">
                     <option disabled selected>Select Year</option>
                     <option>2017</option>
                     <option>2018</option>
