Support button variation

--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -39,7 +39,7 @@
         <form action="/events/{{ event.id }}/donate" method="post">
         <br>Want to support this event? <br>
         <a id="donate" type="submit"></a>
-        <button class="btn btn-success btn-lg" type="submit" id="donate">Donate</button>
+        <button class="btn btn-success btn-lg" type="submit" id="donate">Support</button>
     </div>
     
     <!-- Button code -->
