Change button back to donate

--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -39,12 +39,13 @@
         <form action="/events/{{ event.id }}/donate" method="post">
         <br>Want to support this event? <br>
         <a id="donate" type="submit"></a>
-        <button class="btn btn-success btn-lg" type="submit" id="donate">Support</button>
+        <button class="btn btn-success btn-lg" type="submit" id="donate">Donate</button>
     </div>
     
     <!-- Button code -->
     <div class="col-md-4">
       <br><br>
+      
     <div title="Add to Calendar" class="addeventatc">
     Add to Calendar
       <span class="start">{{event.month}}/{{event.day}}/{{event.year}}</span>
